# aooserver

./: .gitignore  CMakeLists.txt  README.md
Builds/Windows/: README.md  build.bat  build.ps1
Source/: Main.cpp
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
